// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots app/pages/collectivite/Historique/membres/HistoriqueItemMembres Membre Ajout Champ Intervention 1`] = `
<div
  className="flex flex-col gap-4 md:flex-row md:gap-6"
>
  <div
    className="pr-6 w-min md:border-r md:border-gray-200"
  >
    <span
      className="py-1 px-2 text-sm uppercase whitespace-nowrap text-blue-600 bg-blue-100 rounded-md"
    >
      08 août 2022
    </span>
  </div>
  <div
    className="flex flex-col overflow-hidden md:flex-row"
  >
    <div
      className="mr-4 mt-0.5 text-blue-600 fr-fi-information-fill"
    />
    <div
      className="flex flex-col overflow-hidden"
    >
      <div
        className="mb-4"
      >
        <p
          className="mb-2 font-bold text-blue-600"
        >
          Membre modifié
        </p>
        <p
          className="mb-2"
        >
          <span
            className="text-gray-500"
          >
            Par : 
          </span>
          Richard Evans
        </p>
        <p
          className="mb-2 last:mb-0"
        >
          <span
            className="text-gray-500"
          >
            Nom du membre modifié
             : 
          </span>
          Yala Dada
        </p>
        <p
          className="mb-2 last:mb-0"
        >
          <span
            className="text-gray-500"
          >
            Champ modifié
             : 
          </span>
          Champ d'intervention
        </p>
      </div>
      <div
        className="mb-4 border-t border-b border-gray-200"
      >
        <button
          className="flex items-center w-full py-4 px-2"
          onClick={[Function]}
        >
          <div
            className="font-bold"
          >
            Afficher le détail
          </div>
          <div
            className="ml-auto fr-fi-arrow-down-s-line duration-100 rotate-180"
          />
        </button>
        <div
          className="max-w-full p-2 mb-4 bg-gray-100"
        >
          <div
            className="max-w-full w-max p-2 border-2 border-green-400"
          >
            Climat Air Énergie
          </div>
        </div>
      </div>
      <a
        className="flex items-center ml-auto fr-btn fr-btn--secondary !px-4 border border-bf500"
        href="/collectivite/1/users"
        onClick={[Function]}
      >
        Voir la page
         
        <span
          className="ml-1 mt-1 fr-fi-arrow-right-line scale-75"
        />
      </a>
    </div>
  </div>
</div>
`;

exports[`Storyshots app/pages/collectivite/Historique/membres/HistoriqueItemMembres Membre Ajout Details Fonction 1`] = `
<div
  className="flex flex-col gap-4 md:flex-row md:gap-6"
>
  <div
    className="pr-6 w-min md:border-r md:border-gray-200"
  >
    <span
      className="py-1 px-2 text-sm uppercase whitespace-nowrap text-blue-600 bg-blue-100 rounded-md"
    >
      08 août 2022
    </span>
  </div>
  <div
    className="flex flex-col overflow-hidden md:flex-row"
  >
    <div
      className="mr-4 mt-0.5 text-blue-600 fr-fi-information-fill"
    />
    <div
      className="flex flex-col overflow-hidden"
    >
      <div
        className="mb-4"
      >
        <p
          className="mb-2 font-bold text-blue-600"
        >
          Membre modifié
        </p>
        <p
          className="mb-2"
        >
          <span
            className="text-gray-500"
          >
            Par : 
          </span>
          Richard Evans
        </p>
        <p
          className="mb-2 last:mb-0"
        >
          <span
            className="text-gray-500"
          >
            Nom du membre modifié
             : 
          </span>
          Yala Dada
        </p>
        <p
          className="mb-2 last:mb-0"
        >
          <span
            className="text-gray-500"
          >
            Champ modifié
             : 
          </span>
          Détails fonction
        </p>
      </div>
      <div
        className="mb-4 border-t border-b border-gray-200"
      >
        <button
          className="flex items-center w-full py-4 px-2"
          onClick={[Function]}
        >
          <div
            className="font-bold"
          >
            Afficher le détail
          </div>
          <div
            className="ml-auto fr-fi-arrow-down-s-line duration-100 rotate-180"
          />
        </button>
        <div
          className="max-w-full p-2 mb-4 bg-gray-100"
        >
          <div
            className="max-w-full w-max p-2 border-2 border-green-400"
          >
            Consultant assistance à maîtrise d’ouvrage - Bureau d’études Green
          </div>
        </div>
      </div>
      <a
        className="flex items-center ml-auto fr-btn fr-btn--secondary !px-4 border border-bf500"
        href="/collectivite/1/users"
        onClick={[Function]}
      >
        Voir la page
         
        <span
          className="ml-1 mt-1 fr-fi-arrow-right-line scale-75"
        />
      </a>
    </div>
  </div>
</div>
`;

exports[`Storyshots app/pages/collectivite/Historique/membres/HistoriqueItemMembres Membre Ajout Fonction 1`] = `
<div
  className="flex flex-col gap-4 md:flex-row md:gap-6"
>
  <div
    className="pr-6 w-min md:border-r md:border-gray-200"
  >
    <span
      className="py-1 px-2 text-sm uppercase whitespace-nowrap text-blue-600 bg-blue-100 rounded-md"
    >
      08 août 2022
    </span>
  </div>
  <div
    className="flex flex-col overflow-hidden md:flex-row"
  >
    <div
      className="mr-4 mt-0.5 text-blue-600 fr-fi-information-fill"
    />
    <div
      className="flex flex-col overflow-hidden"
    >
      <div
        className="mb-4"
      >
        <p
          className="mb-2 font-bold text-blue-600"
        >
          Membre modifié
        </p>
        <p
          className="mb-2"
        >
          <span
            className="text-gray-500"
          >
            Par : 
          </span>
          Richard Evans
        </p>
        <p
          className="mb-2 last:mb-0"
        >
          <span
            className="text-gray-500"
          >
            Nom du membre modifié
             : 
          </span>
          Yala Dada
        </p>
        <p
          className="mb-2 last:mb-0"
        >
          <span
            className="text-gray-500"
          >
            Champ modifié
             : 
          </span>
          Fonction
        </p>
      </div>
      <div
        className="mb-4 border-t border-b border-gray-200"
      >
        <button
          className="flex items-center w-full py-4 px-2"
          onClick={[Function]}
        >
          <div
            className="font-bold"
          >
            Afficher le détail
          </div>
          <div
            className="ml-auto fr-fi-arrow-down-s-line duration-100 rotate-180"
          />
        </button>
        <div
          className="max-w-full p-2 mb-4 bg-gray-100"
        >
          <div
            className="max-w-full w-max p-2 border-2 border-green-400"
          >
            Équipe technique
          </div>
        </div>
      </div>
      <a
        className="flex items-center ml-auto fr-btn fr-btn--secondary !px-4 border border-bf500"
        href="/collectivite/1/users"
        onClick={[Function]}
      >
        Voir la page
         
        <span
          className="ml-1 mt-1 fr-fi-arrow-right-line scale-75"
        />
      </a>
    </div>
  </div>
</div>
`;

exports[`Storyshots app/pages/collectivite/Historique/membres/HistoriqueItemMembres Membre Ajoute 1`] = `
<div
  className="flex flex-col gap-4 md:flex-row md:gap-6"
>
  <div
    className="pr-6 w-min md:border-r md:border-gray-200"
  >
    <span
      className="py-1 px-2 text-sm uppercase whitespace-nowrap text-blue-600 bg-blue-100 rounded-md"
    >
      08 août 2022
    </span>
  </div>
  <div
    className="flex flex-col overflow-hidden md:flex-row"
  >
    <div
      className="mr-4 mt-0.5 text-blue-600 fr-fi-information-fill"
    />
    <div
      className="flex flex-col overflow-hidden"
    >
      <div
        className="mb-4"
      >
        <p
          className="mb-2 font-bold text-blue-600"
        >
          Membre ajouté
        </p>
        <p
          className="mb-2"
        >
          <span
            className="text-gray-500"
          >
            Par : 
          </span>
          Richard Evans
        </p>
        <p
          className="mb-2 last:mb-0"
        >
          <span
            className="text-gray-500"
          >
            Adresse email du nouveau membre
             : 
          </span>
          Yala Dada
        </p>
        <p
          className="mb-2 last:mb-0"
        >
          <span
            className="text-gray-500"
          >
            Accès
             : 
          </span>
          edition
        </p>
      </div>
      <a
        className="flex items-center ml-auto fr-btn fr-btn--secondary !px-4 border border-bf500"
        href="/collectivite/1/users"
        onClick={[Function]}
      >
        Voir la page
         
        <span
          className="ml-1 mt-1 fr-fi-arrow-right-line scale-75"
        />
      </a>
    </div>
  </div>
</div>
`;

exports[`Storyshots app/pages/collectivite/Historique/membres/HistoriqueItemMembres Membre Modifie Acces 1`] = `
<div
  className="flex flex-col gap-4 md:flex-row md:gap-6"
>
  <div
    className="pr-6 w-min md:border-r md:border-gray-200"
  >
    <span
      className="py-1 px-2 text-sm uppercase whitespace-nowrap text-blue-600 bg-blue-100 rounded-md"
    >
      08 août 2022
    </span>
  </div>
  <div
    className="flex flex-col overflow-hidden md:flex-row"
  >
    <div
      className="mr-4 mt-0.5 text-blue-600 fr-fi-information-fill"
    />
    <div
      className="flex flex-col overflow-hidden"
    >
      <div
        className="mb-4"
      >
        <p
          className="mb-2 font-bold text-blue-600"
        >
          Membre modifié
        </p>
        <p
          className="mb-2"
        >
          <span
            className="text-gray-500"
          >
            Par : 
          </span>
          Richard Evans
        </p>
        <p
          className="mb-2 last:mb-0"
        >
          <span
            className="text-gray-500"
          >
            Nom du membre modifié
             : 
          </span>
          Yala Dada
        </p>
        <p
          className="mb-2 last:mb-0"
        >
          <span
            className="text-gray-500"
          >
            Champ modifié
             : 
          </span>
          Accès
        </p>
      </div>
      <div
        className="mb-4 border-t border-b border-gray-200"
      >
        <button
          className="flex items-center w-full py-4 px-2"
          onClick={[Function]}
        >
          <div
            className="font-bold"
          >
            Afficher le détail
          </div>
          <div
            className="ml-auto fr-fi-arrow-down-s-line duration-100 rotate-180"
          />
        </button>
        <div
          className="max-w-full p-2 mb-4 bg-gray-100"
        >
          <div
            className="max-w-full w-max p-2 border-2 mb-4 border-red-400"
          >
            <span
              className="line-through"
            >
              edition
            </span>
          </div>
          <div
            className="max-w-full w-max p-2 border-2 border-green-400"
          >
            lecture
          </div>
        </div>
      </div>
      <a
        className="flex items-center ml-auto fr-btn fr-btn--secondary !px-4 border border-bf500"
        href="/collectivite/1/users"
        onClick={[Function]}
      >
        Voir la page
         
        <span
          className="ml-1 mt-1 fr-fi-arrow-right-line scale-75"
        />
      </a>
    </div>
  </div>
</div>
`;

exports[`Storyshots app/pages/collectivite/Historique/membres/HistoriqueItemMembres Membre Modifie Champ Intervention 1`] = `
<div
  className="flex flex-col gap-4 md:flex-row md:gap-6"
>
  <div
    className="pr-6 w-min md:border-r md:border-gray-200"
  >
    <span
      className="py-1 px-2 text-sm uppercase whitespace-nowrap text-blue-600 bg-blue-100 rounded-md"
    >
      08 août 2022
    </span>
  </div>
  <div
    className="flex flex-col overflow-hidden md:flex-row"
  >
    <div
      className="mr-4 mt-0.5 text-blue-600 fr-fi-information-fill"
    />
    <div
      className="flex flex-col overflow-hidden"
    >
      <div
        className="mb-4"
      >
        <p
          className="mb-2 font-bold text-blue-600"
        >
          Membre modifié
        </p>
        <p
          className="mb-2"
        >
          <span
            className="text-gray-500"
          >
            Par : 
          </span>
          Richard Evans
        </p>
        <p
          className="mb-2 last:mb-0"
        >
          <span
            className="text-gray-500"
          >
            Nom du membre modifié
             : 
          </span>
          Yala Dada
        </p>
        <p
          className="mb-2 last:mb-0"
        >
          <span
            className="text-gray-500"
          >
            Champ modifié
             : 
          </span>
          Champ d'intervention
        </p>
      </div>
      <div
        className="mb-4 border-t border-b border-gray-200"
      >
        <button
          className="flex items-center w-full py-4 px-2"
          onClick={[Function]}
        >
          <div
            className="font-bold"
          >
            Afficher le détail
          </div>
          <div
            className="ml-auto fr-fi-arrow-down-s-line duration-100 rotate-180"
          />
        </button>
        <div
          className="max-w-full p-2 mb-4 bg-gray-100"
        >
          <div
            className="max-w-full w-max p-2 border-2 mb-4 border-red-400"
          >
            <span
              className="line-through"
            >
              Climat Air Énergie
            </span>
          </div>
          <div
            className="max-w-full w-max p-2 border-2 border-green-400"
          >
            Économie circulaire
          </div>
        </div>
      </div>
      <a
        className="flex items-center ml-auto fr-btn fr-btn--secondary !px-4 border border-bf500"
        href="/collectivite/1/users"
        onClick={[Function]}
      >
        Voir la page
         
        <span
          className="ml-1 mt-1 fr-fi-arrow-right-line scale-75"
        />
      </a>
    </div>
  </div>
</div>
`;

exports[`Storyshots app/pages/collectivite/Historique/membres/HistoriqueItemMembres Membre Modifie Details Fonction 1`] = `
<div
  className="flex flex-col gap-4 md:flex-row md:gap-6"
>
  <div
    className="pr-6 w-min md:border-r md:border-gray-200"
  >
    <span
      className="py-1 px-2 text-sm uppercase whitespace-nowrap text-blue-600 bg-blue-100 rounded-md"
    >
      08 août 2022
    </span>
  </div>
  <div
    className="flex flex-col overflow-hidden md:flex-row"
  >
    <div
      className="mr-4 mt-0.5 text-blue-600 fr-fi-information-fill"
    />
    <div
      className="flex flex-col overflow-hidden"
    >
      <div
        className="mb-4"
      >
        <p
          className="mb-2 font-bold text-blue-600"
        >
          Membre modifié
        </p>
        <p
          className="mb-2"
        >
          <span
            className="text-gray-500"
          >
            Par : 
          </span>
          Richard Evans
        </p>
        <p
          className="mb-2 last:mb-0"
        >
          <span
            className="text-gray-500"
          >
            Nom du membre modifié
             : 
          </span>
          Yala Dada
        </p>
        <p
          className="mb-2 last:mb-0"
        >
          <span
            className="text-gray-500"
          >
            Champ modifié
             : 
          </span>
          Détails fonction
        </p>
      </div>
      <div
        className="mb-4 border-t border-b border-gray-200"
      >
        <button
          className="flex items-center w-full py-4 px-2"
          onClick={[Function]}
        >
          <div
            className="font-bold"
          >
            Afficher le détail
          </div>
          <div
            className="ml-auto fr-fi-arrow-down-s-line duration-100 rotate-180"
          />
        </button>
        <div
          className="max-w-full p-2 mb-4 bg-gray-100"
        >
          <div
            className="max-w-full w-max p-2 border-2 mb-4 border-red-400"
          >
            <span
              className="line-through"
            >
              Consultant assistance à maîtrise d’ouvrage - Bureau d’études Green
            </span>
          </div>
          <div
            className="max-w-full w-max p-2 border-2 border-green-400"
          >
            Vice-Président à l'aménagement durable du territoire de la CC du Pays de Château-Gontier
          </div>
        </div>
      </div>
      <a
        className="flex items-center ml-auto fr-btn fr-btn--secondary !px-4 border border-bf500"
        href="/collectivite/1/users"
        onClick={[Function]}
      >
        Voir la page
         
        <span
          className="ml-1 mt-1 fr-fi-arrow-right-line scale-75"
        />
      </a>
    </div>
  </div>
</div>
`;

exports[`Storyshots app/pages/collectivite/Historique/membres/HistoriqueItemMembres Membre Modifie Fonction 1`] = `
<div
  className="flex flex-col gap-4 md:flex-row md:gap-6"
>
  <div
    className="pr-6 w-min md:border-r md:border-gray-200"
  >
    <span
      className="py-1 px-2 text-sm uppercase whitespace-nowrap text-blue-600 bg-blue-100 rounded-md"
    >
      08 août 2022
    </span>
  </div>
  <div
    className="flex flex-col overflow-hidden md:flex-row"
  >
    <div
      className="mr-4 mt-0.5 text-blue-600 fr-fi-information-fill"
    />
    <div
      className="flex flex-col overflow-hidden"
    >
      <div
        className="mb-4"
      >
        <p
          className="mb-2 font-bold text-blue-600"
        >
          Membre modifié
        </p>
        <p
          className="mb-2"
        >
          <span
            className="text-gray-500"
          >
            Par : 
          </span>
          Richard Evans
        </p>
        <p
          className="mb-2 last:mb-0"
        >
          <span
            className="text-gray-500"
          >
            Nom du membre modifié
             : 
          </span>
          Yala Dada
        </p>
        <p
          className="mb-2 last:mb-0"
        >
          <span
            className="text-gray-500"
          >
            Champ modifié
             : 
          </span>
          Fonction
        </p>
      </div>
      <div
        className="mb-4 border-t border-b border-gray-200"
      >
        <button
          className="flex items-center w-full py-4 px-2"
          onClick={[Function]}
        >
          <div
            className="font-bold"
          >
            Afficher le détail
          </div>
          <div
            className="ml-auto fr-fi-arrow-down-s-line duration-100 rotate-180"
          />
        </button>
        <div
          className="max-w-full p-2 mb-4 bg-gray-100"
        >
          <div
            className="max-w-full w-max p-2 border-2 mb-4 border-red-400"
          >
            <span
              className="line-through"
            >
              Partenaire
            </span>
          </div>
          <div
            className="max-w-full w-max p-2 border-2 border-green-400"
          >
            Équipe technique
          </div>
        </div>
      </div>
      <a
        className="flex items-center ml-auto fr-btn fr-btn--secondary !px-4 border border-bf500"
        href="/collectivite/1/users"
        onClick={[Function]}
      >
        Voir la page
         
        <span
          className="ml-1 mt-1 fr-fi-arrow-right-line scale-75"
        />
      </a>
    </div>
  </div>
</div>
`;

exports[`Storyshots app/pages/collectivite/Historique/membres/HistoriqueItemMembres Membre Retire 1`] = `
<div
  className="flex flex-col gap-4 md:flex-row md:gap-6"
>
  <div
    className="pr-6 w-min md:border-r md:border-gray-200"
  >
    <span
      className="py-1 px-2 text-sm uppercase whitespace-nowrap text-blue-600 bg-blue-100 rounded-md"
    >
      08 août 2022
    </span>
  </div>
  <div
    className="flex flex-col overflow-hidden md:flex-row"
  >
    <div
      className="mr-4 mt-0.5 text-blue-600 fr-fi-information-fill"
    />
    <div
      className="flex flex-col overflow-hidden"
    >
      <div
        className="mb-4"
      >
        <p
          className="mb-2 font-bold text-blue-600"
        >
          Membre retiré de la collectivité
        </p>
        <p
          className="mb-2"
        >
          <span
            className="text-gray-500"
          >
            Par : 
          </span>
          Richard Evans
        </p>
        <p
          className="mb-2 last:mb-0"
        >
          <span
            className="text-gray-500"
          >
            Nom du membre retiré
             : 
          </span>
          Yala Dada
        </p>
      </div>
      <a
        className="flex items-center ml-auto fr-btn fr-btn--secondary !px-4 border border-bf500"
        href="/collectivite/1/users"
        onClick={[Function]}
      >
        Voir la page
         
        <span
          className="ml-1 mt-1 fr-fi-arrow-right-line scale-75"
        />
      </a>
    </div>
  </div>
</div>
`;
